--- a/app/src/main/res/layout/screen_locker_widget.xml
+++ b/app/src/main/res/layout/screen_locker_widget.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@android:color/transparent">
+    android:background="@drawable/widget_background"
+    android:gravity="center">
 
-    <Button
+    <ImageView
         android:id="@+id/widget_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lock Screen" />
-</LinearLayout>
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
+        android:contentDescription="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_lock_white"
+        android:tint="@android:color/white" />
+</FrameLayout>
