--- a/app/src/main/res/xml/screen_locker_widget_provider.xml
+++ b/app/src/main/res/xml/screen_locker_widget_provider.xml
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/screen_locker_widget"
-    android:minWidth="110dp"
-    android:minHeight="110dp"
+    android:minWidth="40dp"
+    android:minHeight="40dp"
+    android:maxWidth="40dp"
+    android:maxHeight="40dp"
+    android:minResizeWidth="40dp"
+    android:minResizeHeight="40dp"
+    android:resizeMode="none"
     android:updatePeriodMillis="0"
-    android:widgetCategory="home_screen">
-</appwidget-provider>
+    android:widgetCategory="home_screen" />
