--- a/app/src/main/res/layout/screen_locker_widget.xml
+++ b/app/src/main/res/layout/screen_locker_widget.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/widget_button"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
     android:background="@drawable/widget_background"
     android:gravity="center">
 
     <ImageView
-        android:id="@+id/widget_button"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_gravity="center"
